# mls-chat

./: .cursorignore  .gitignore  CLAUDE.md  IDENTITY_MANAGER_GUIDE.md  README.md
.github/workflows/: rust-tests.yml
changelog/: 20251020-groupservice-untested-methods.md  20251020-impl-openmls-service.md  20251020-rust-client-feature-analysis.md  20251020-rust-client.md  20251020-server-prototype.md  20251020-test-improvements.md  20251021-api-tests-http-integration.md  20251021-client-implementation-review.md  20251021-client-keypackage-registration.md  20251021-client-orchestrator-complete.md  20251021-client-prototype.md  20251021-encryption-correction.md  20251021-extract-http-server.md  20251021-group-persistence.md  20251021-group-state-persistence.md  20251021-integration-tests-added.md  20251021-invitation-protocol-improvements.md  20251021-keypackage-api.md  20251021-openmls-api-review.md  20251021-openmls-sqlite-storage-research.md  20251021-refactor-openmls-storage.md  20251021-websocket-tests-http-integration.md  20251025-client-commit-merge-fix.md  20251025-config-parameter.md  20251025-e2e-encrypted-message-bug.md  20251025-fix-cli-orchestration.md  20251025-group-metadata-encryption-refactor.md  20251025-invite-system-analysis.md  20251025-remove-group-members-metadata.md  20251025-sender-decrypt-bug.md  20251025-websocket-tests-stabilization.md  20251025-welcome-message-and-tests.md  20251025-welcome-message-routing.md  20251025-wrong-epoch-error.md  20251027-mls-client-refactoring.md  20251027-phase1-implementation.md  20251027-phase1-iteration2-testing.md  20251027-phase1-testing-feedback.md  20251027-phase2-mlsmembership-extraction.md  20251027-phase2-testing-iteration1.md  (+41 more)
client/rust/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  mls-client-prorotype.plan.md
client/rust/e2e_tests/: .gitignore  README.md  test_welcome_routing.expect
client/rust/src/: api.rs  cli.rs  client.rs  crypto.rs  error.rs  extensions.rs  identity.rs  lib.rs  main.rs  message_processing.rs  models.rs  provider.rs  storage.rs  websocket.rs
client/rust/src/mls/: connection.rs  keypackage_pool.rs  membership.rs  mod.rs  user.rs
client/rust/src/models/: group.rs  message.rs  mod.rs  user.rs
client/rust/src/services/: client_manager.rs  group_service.rs  message_service.rs  mls_service.rs  mod.rs  server_client.rs  storage.rs  websocket_manager.rs
client/rust/tests/: api_tests.rs  client_tests.rs  e2e_tests.rs  invitation_tests.rs  keypackage_pool_tests.rs  message_processing_tests.rs  service_tests.rs  storage_tests.rs  websocket_tests.rs
client/rust/tests/common/: mod.rs
docs/: SIGNATURE_KEY_PERSISTENCE_IMPLEMENTATION.md  key-packages.md  keypackage-pool-strategy.md  membership-learn.md  sqlite-storage-comparison.md
server/: .gitignore  Cargo.toml
server/src/: config.rs  lib.rs  main.rs  server.rs
server/src/db/: init.rs  keypackage_store.rs  mod.rs  models.rs
server/src/handlers/: mod.rs  rest.rs  websocket.rs
server/tests/: integration_tests.rs  websocket_tests.rs
