[package]
name = "mls-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-web-actors = "4.3"
actix = "0.13"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.18", features = ["v4", "serde"] }
futures = "0.3"
bytes = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

[dev-dependencies]
actix-test = "0.1"
tokio-test = "0.4"
tempfile = "3.14"
