[package]
name = "mls-chat-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mls-client"
path = "src/main.rs"

[dependencies]
# MLS dependencies
openmls = "0.7"
openmls_rust_crypto = "0.4"
openmls_traits = "0.4"
openmls_basic_credential = "0.4"

# Networking
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5.0"
openmls_sqlite_storage = "0.1.1"
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

[dev-dependencies]
# Server for integration tests
mls-chat-server = { path = "../../server" }
tempfile = "3.14"
tokio-test = "0.4"
actix-web = "4.11"
actix = "0.13"
actix-web-actors = "4.3"
